--- a/week1/Tutorial_Keras.ipynb
+++ b/week1/Tutorial_Keras.ipynb
@@ -30,8 +30,7 @@
         "7K15cxLiCvTx",
         "UEm38jpQCvTZ",
         "ygM1ZR8vCvT6"
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -2137,6 +2136,40 @@
     },
     {
       "metadata": {
+        "id": "DwFGS5sFpt-_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Или вы можете добавить кастомный лосс, который будет оптимизироваться в ходе обучения. Делать его придется при помощи backend Кераса. "
+      ]
+    },
+    {
+      "metadata": {
+        "id": "kXKb68F-ptLZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def customLoss(yTrue,yPred):\n",
+        "    return K.sum(K.log(yTrue) - K.log(yPred))\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Dense(10, input_dim=100))\n",
+        "\n",
+        "\n",
+        "model.compile(loss=customLoss,\n",
+        "              optimizer='sgd',\n",
+        "              metrics=['acc'])\n",
+        "\n",
+        "model.fit(x_train, y_train, epochs=3)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "colab_type": "text",
         "deletable": true,
         "editable": true,
@@ -2210,7 +2243,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Также можно сделать кастомную метрику. Делать её придется при помощи backend Кераса. Пример:"
+        "Также можно сделать кастомную метрику. Делать её придется снова при помощи backend Кераса. Пример:"
       ]
     },
     {
@@ -2318,19 +2351,6 @@
     },
     {
       "metadata": {
-        "id": "4byMlHa68ozZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "from keras.layers import InputLayer, Reshape, Conv2D, MaxPool2D, Flatten, Dense, Dropout"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "deletable": true,
         "editable": true,
         "id": "VzOzZbswtXFA",
@@ -2401,7 +2421,8 @@
         "1. Размер батча: 64\n",
         "2. Число эпох: 3\n",
         "3. Отведите под валдиацию 10% выборки\n",
-        "4. Подайте в fit Callback: TQDMNotebookCallback() (чтобы установить pip install keras-tqdm, импорт: from keras_tqdm import TQDMNotebookCallback)"
+        "4. Подайте в fit Callback: TQDMNotebookCallback() (чтобы установить pip install keras-tqdm, импорт: from keras_tqdm import TQDMNotebookCallback)\n",
+        "5. Подайте в fit Callback Tensorboard'a (чуть ниже будет объяснено про это подробнее)"
       ]
     },
     {
@@ -2412,25 +2433,26 @@
       },
       "cell_type": "code",
       "source": [
-        "#!pip install keras-tqdm\n",
-        "from keras_tqdm import TQDMNotebookCallback"
+        "# Импортим CallBack tqdm'a. Если не работает импорт - установить через !pip install keras-tqdm\n",
+        "from keras_tqdm import TQDMNotebookCallback\n",
+        "# В fit() подайте инстанс объекта TQDMNotebookCallback\n",
+        "# Теперь делаем импорт Callback'a для визуализации в TensorBoard:\n",
+        "from tensorboardcolab import *\n",
+        "tbc=TensorBoardColab() # генерирует URL\n",
+        "# В fit же передайте объект TensorBoardColabCallback(tbc)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "-EesZVeQzvCb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ua-tNrPvmQKp",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# tbc=TensorBoardColab()\n",
-        "# [TensorBoardColabCallback(tbc)]"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Если не открывается URL, то нужно включить VPN. Например, через opera vpn или установить на Chrome расширение (например, Browsec https://chrome.google.com/webstore/detail/browsec-vpn-free-and-unli/omghfjlpggmjjaagoclmmobgdodcjboh)"
+      ]
     },
     {
       "metadata": {
@@ -2486,30 +2508,6 @@
       "cell_type": "code",
       "source": [
         "# Здесь сделайте fit\n",
-        "# <Your Code>\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "NPA40cattXFc",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Теперь сделайте тот же фит, но только в список коллбеков также подайте Callback TensorBoard'a. Чтобы запустить Tensorboard: в консоле `tensorboard --logdir logs`"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "yvHnLDVltXFc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# Объявите CallBack Тензорборда и подайте его в фит модели\n",
         "# <Your Code>"
       ],
       "execution_count": 0,
@@ -2523,6 +2521,7 @@
       },
       "cell_type": "code",
       "source": [
+        "# оценим итоговое качество модели на отложенной выборке: \n",
         "model.evaluate(x_test, keras.utils.to_categorical(y_test))"
       ],
       "execution_count": 0,
@@ -2660,18 +2659,6 @@
         "colab_type": "text",
         "deletable": true,
         "editable": true,
-        "id": "No6cHD6aHAO1"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Либо можно воспользоваться Tensorboard, передав коллбек keras.callbacks.TensorBoard() в fit()"
-      ]
-    },
-    {
-      "metadata": {
-        "colab_type": "text",
-        "deletable": true,
-        "editable": true,
         "id": "UEm38jpQCvTZ"
       },
       "cell_type": "markdown",
@@ -2694,7 +2681,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "ArUQ5XbcCvTb",
@@ -2759,7 +2745,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "A3XzQsI5CvT7",
@@ -2801,7 +2786,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "gNChP8ctCvUA",
@@ -2831,7 +2815,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "3v-kUBlECvUC",
@@ -2854,7 +2837,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "8AzqVsXc2QWY",
@@ -2870,7 +2852,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "nkleGWDb4DFt",
@@ -2898,7 +2879,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "dCqnaLsOCvUG",
@@ -2960,7 +2940,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "7NvYD6uzCvUK",
@@ -2988,7 +2967,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "7tN_yeAeCvUY",
@@ -3018,7 +2996,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "NhJDBGk4I7MD",
@@ -3072,7 +3049,6 @@
     {
       "metadata": {
         "colab_type": "code",
-        "collapsed": true,
         "deletable": true,
         "editable": true,
         "id": "vjJIQoSFc7fk",
