small edit if fashion mnist

--- a/week2/Fashion_MNIST.ipynb
+++ b/week2/Fashion_MNIST.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Модель должна достичь примерно 0.87 accuracy на валидачионной выборке"
+    "Модель должна достичь примерно 0.83 accuracy на валидачионной выборке"
    ]
   },
   {
@@ -497,37 +497,48 @@
    },
    "outputs": [],
    "source": [
-    "# Model\n",
+    "from keras.layers import Activation, BatchNormalization, MaxPooling2D\n",
+    "from keras.optimizers import SGD\n",
+    "chanDim = -1\n",
+    "classes = 10\n",
+    "INIT_LR = 1e-2\n",
+    "\n",
     "model = Sequential()\n",
-    "# Add convolution 2D\n",
     "model.add(InputLayer((28, 28)))\n",
     "model.add(Reshape((28, 28, -1)))\n",
-    "model.add(Conv2D(32, kernel_size=(3, 3),\n",
-    "                 activation='relu')\n",
-    "         )\n",
     "\n",
-    "model.add(MaxPool2D())\n",
-    "# Add dropouts to the model\n",
+    "# first CONV => RELU => CONV => RELU => POOL layer set\n",
+    "model.add(Conv2D(32, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(Conv2D(32, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
-    "model.add(Conv2D(64, \n",
-    "                 kernel_size=(3, 3), \n",
-    "                 activation='relu'))\n",
-    "model.add(MaxPool2D())\n",
-    "# Add dropouts to the model\n",
+    "\n",
+    "# second CONV => RELU => CONV => RELU => POOL layer set\n",
+    "model.add(Conv2D(64, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(Conv2D(64, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
-    "model.add(Conv2D(128, (3, 3), activation='relu'))\n",
-    "# Add dropouts to the model\n",
-    "model.add(Dropout(0.4))\n",
+    "\n",
+    "# first (and only) set of FC => RELU layers\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(128, activation='relu'))\n",
-    "# Add dropouts to the model\n",
-    "model.add(Dropout(0.3))\n",
-    "model.add(Dense(10, activation='softmax'))\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.5))\n",
     "\n",
+    "# softmax classifier\n",
+    "model.add(Dense(classes))\n",
+    "model.add(Activation(\"softmax\"))\n",
     "\n",
-    "model.compile(loss=keras.losses.categorical_crossentropy,\n",
-    "              optimizer='adam',\n",
-    "              metrics=['accuracy'])"
+    "# return the constructed network architecture"
    ]
   },
   {
@@ -538,7 +549,8 @@
    },
    "outputs": [],
    "source": [
-    "from keras_tqdm import TQDMNotebookCallback"
+    "opt = SGD(lr=INIT_LR, momentum=0.9, decay=INIT_LR / 30)\n",
+    "model.compile(loss=\"categorical_crossentropy\", optimizer=opt, metrics=[\"accuracy\"])"
    ]
   },
   {
@@ -627,8 +639,22 @@
     }
    ],
    "source": [
-    "model.fit(x=x_train, y=y_train, epochs=1, batch_size=128, verbose=0,\n",
+    "model.fit(x=x_train, y=y_train, epochs=30, batch_size=32, verbose=0,\n",
     "          validation_split=0.1, callbacks=[TQDMNotebookCallback(leave_inner=True)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как видно, модель примерно на 5-ой эпохе достигает качества 0.92. А к 10-ой эпохе ~0.93"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Вопрос:__ Почему на некоторых эпохах accuracy < val_accuracy ?"
    ]
   },
   {
