callbacks and metrics in week2

--- a/week2/cards_recognition_reduced/train_notebook.ipynb
+++ b/week2/cards_recognition_reduced/train_notebook.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "DarZnvmuOiac"
    },
    "source": [
@@ -14,10 +12,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### В этом ноутбуке:\n",
+    "1. Изучим датасет с картами лояльности\n",
+    "2. Построим модель классификации карт по бренду\n",
+    "3. Изучим как добавлять кастомные метрики в процесс обучения на примерах Precision и Recall\n",
+    "4. Изучим Callback, как их добавлять, какие есть стандартные Callbacks\n",
+    "5. Более подробно остановимся на Tensboard Callback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "TOXRs0OQOiae"
    },
    "source": [
@@ -31,8 +39,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "id": "_1S2xR6EOiag"
    },
    "outputs": [],
@@ -52,8 +58,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "id": "DEz8Fek1Oial"
    },
    "outputs": [],
@@ -69,8 +73,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "id": "bzHV3tq8Oiap"
    },
    "outputs": [],
@@ -85,8 +87,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "LvfzGRQaOias"
    },
    "source": [
@@ -102,9 +102,6 @@
      "height": 483
     },
     "colab_type": "code",
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "id": "GLVVr38JOiau",
     "outputId": "74ac2e20-3ce3-4b02-c0b3-2ced6dde4ed6"
    },
@@ -130,8 +127,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "TVMn7KHVOia1"
    },
    "source": [
@@ -147,9 +142,6 @@
      "height": 35
     },
     "colab_type": "code",
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "id": "78Dw-fO3Oia3",
     "outputId": "7794161f-a8ef-42fa-c6e0-b170be05670e"
    },
@@ -185,8 +177,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "Vcdag8VOOia9"
    },
    "source": [
@@ -197,8 +187,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "zMforP2KOia_"
    },
    "source": [
@@ -212,8 +200,6 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "id": "KHwCu-vEOibA"
    },
    "outputs": [],
@@ -239,8 +225,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "unGueFLpOibF"
    },
    "source": [
@@ -251,8 +235,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "CUAR8dVFOibG"
    },
    "source": [
@@ -274,9 +256,6 @@
      "height": 451
     },
     "colab_type": "code",
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "id": "I3o6d61eOibH",
     "outputId": "0920b1da-7082-445a-bf8e-e2ffac99bc99"
    },
@@ -311,9 +290,6 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "id": "zt7Rw7AfOibO"
    },
    "outputs": [],
@@ -326,8 +302,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "_Eg-b8K3OibT"
    },
    "source": [
@@ -338,8 +312,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "yerJBUsUOibV"
    },
    "source": [
@@ -362,9 +334,6 @@
      "height": 52
     },
     "colab_type": "code",
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "id": "wwjv7nSCOibX",
     "outputId": "ea9286f4-4ca2-4c2f-856f-6643aa49758a"
    },
@@ -409,48 +378,129 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Делаем compile и запускаем обучение:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "collapsed": true,
+    "id": "YEUiEpMBOibj"
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\" Set train parameters for choosen model \"\"\"\n",
+    "# Можете расккоментировать другие оптимизаторы:\n",
+    "#sgd = optimizers.SGD(lr=0.05, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "optimizer = optimizers.Adadelta(lr=1.0, rho=0.95, epsilon=None, decay=0.0)\n",
+    "#optimize = optimizers.Adadelta(lr=1.0, rho=0.95, epsilon=None, decay=0.0)\n",
+    "\n",
+    "model.compile(optimizer=optimizer,\n",
+    "                  loss='categorical_crossentropy',\n",
+    "                  metrics=['accuracy'])\n",
+    "\n",
+    "STEP_SIZE_TRAIN = (train_generator.n // train_generator.batch_size)\n",
+    "STEP_SIZE_VALID = (valid_generator.n // valid_generator.batch_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
+    "id": "hi6t0YF8Oibn"
+   },
+   "source": [
+    "### Обучение модели:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "ceeu0Z-8Oibp"
+   },
+   "source": [
+    "В модель передаём: генератор данных (он сам автоматически генерирует X и y), валидационную выборку (тоже посредством генератора), число эпох, коллбеки и verbose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Training \"\"\"\n",
+    "history = model.fit_generator(generator=train_generator,\n",
+    "                                  steps_per_epoch=STEP_SIZE_TRAIN,\n",
+    "                                  validation_data=valid_generator,\n",
+    "                                  #validation_steps=STEP_SIZE_VALID,\n",
+    "                                  epochs=4,\n",
+    "                                  verbose=1\n",
+    "                                  )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Кастомные метрики:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras.backend as K\n",
+    "\n",
+    "def precision(y_true, y_pred):\n",
+    "    \"\"\"Precision metric.\n",
+    "     Only computes a batch-wise average of precision.\n",
+    "     Computes the precision, a metric for multi-label classification of\n",
+    "    how many selected items are relevant.\n",
+    "    \"\"\"\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    predicted_positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
+    "    precision = true_positives / (predicted_positives + K.epsilon())\n",
+    "    return precision\n",
+    "\n",
+    "def recall(y_true, y_pred):\n",
+    "    \"\"\"Recall metric.\n",
+    "     Only computes a batch-wise average of recall.\n",
+    "     Computes the recall, a metric for multi-label classification of\n",
+    "    how many relevant items are selected.\n",
+    "    \"\"\"\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    possible_positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
+    "    recall = true_positives / (possible_positives + K.epsilon())\n",
+    "    return recall\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=optimizer,\n",
+    "                  loss='categorical_crossentropy',\n",
+    "                  metrics=['accuracy', precision, recall])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
     "id": "XCTToPtmOibd"
    },
    "source": [
-    "### Объявления оптимизатора, а также коллбеков:"
+    "## CallBacks:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "deletable": true,
-    "editable": true,
-    "id": "xUaj69wsOibf"
-   },
-   "source": [
-    "В следующем блоке мы объявим оптимизаторы и коллбеки"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "deletable": true,
-    "editable": true,
-    "id": "T4exttwYOibg"
-   },
-   "source": [
-    "__Оптимизаторы__ отвечают за скорость сходимости процесса обучения. В Керасе имплементированы такие оптимихаторы, как SGD, RMSprop, Adagrad, Adadelta и т.д.\n",
-    "Чтобы воспользоваться тем или иным оптимизатором, достаточно его объявить, например, вот так: ```sgd = optimizers.SGD(lr=0.05, decay=1e-6, momentum=0.9, nesterov=True)```\n",
-    "Список всех оптимизаторов, реализованных в Керасе: https://keras.io/optimizers/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "deletable": true,
-    "editable": true,
     "id": "45bRs8t4Oibh"
    },
    "source": [
@@ -476,81 +526,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
-    "id": "YEUiEpMBOibj"
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\"\"\" Set train parameters for choosen model \"\"\"\n",
-    "# Можете расккоментировать другие оптимизаторы:\n",
-    "#sgd = optimizers.SGD(lr=0.05, decay=1e-6, momentum=0.9, nesterov=True)\n",
-    "optimizer = optimizers.Adadelta(lr=1.0, rho=0.95, epsilon=None, decay=0.0)\n",
-    "#optimize = optimizers.Adadelta(lr=1.0, rho=0.95, epsilon=None, decay=0.0)\n",
+    "from keras_tqdm import TQDMNotebookCallback\n",
     "\n",
-    "model.compile(optimizer=optimizer,\n",
-    "                  loss='categorical_crossentropy',\n",
-    "                  metrics=['accuracy', precision, recall])\n",
-    "\n",
-    "STEP_SIZE_TRAIN = (train_generator.n // train_generator.batch_size)\n",
-    "STEP_SIZE_VALID = (valid_generator.n // valid_generator.batch_size)\n",
     "\n",
     "\"\"\" Callbacks \"\"\"\n",
     "checkpointer = ModelCheckpoint(os.path.join(OUTPUT_PATH, 'weights.{epoch:02d}-val_loss{val_loss:.2f}.hdf5'), monitor='val_loss', verbose=0, save_best_only=False,\n",
     "                               save_weights_only=False, mode='auto', period=1)\n",
     "\n",
     "\"\"\" Enable logging for Tensorboard \"\"\"\n",
-    "tf_logger = TFLogger(PROJECT_PATH, model_name + '.h5', args['batch_size'], STEP_SIZE_TRAIN, STEP_SIZE_VALID,\n",
-    "                      TRAINABLE_LAYERS, BARCODE, log_every=1, VERBOSE=0,  histogram_freq=0, write_graph=True,\n",
-    "                       write_grads=False, write_images=False, embeddings_freq=0, embeddings_layer_names=None,\n",
-    "                       embeddings_metadata=None, embeddings_data=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "deletable": true,
-    "editable": true,
-    "id": "hi6t0YF8Oibn"
-   },
-   "source": [
-    "### Обучение модели:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "deletable": true,
-    "editable": true,
-    "id": "ceeu0Z-8Oibp"
-   },
-   "source": [
-    "В модель передаём: генератор данных (он сам автоматически генерирует X и y), валидационную выборку (тоже посредством генератора), число эпох, коллбеки и verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1191
-    },
-    "colab_type": "code",
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "id": "oqtgE3H6Oibq",
-    "outputId": "d11334e9-8807-489f-8cf3-73d13faa4899"
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\" Training \"\"\"\n",
+    "TB = keras.callbacks.TensorBoard(log_dir='./logs', histogram_freq=0, batch_size=32, write_graph=True, write_grads=False, write_images=False, embeddings_freq=0, embeddings_layer_names=None, embeddings_metadata=None, embeddings_data=None, update_freq='epoch')\n",
+    "\n",
+    "# Скоращает learning rate, когда loss не уменьшается несколько эпох подряд:\n",
+    "reduce = keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=10, verbose=0, mode='auto', min_delta=0.0001, cooldown=0, min_lr=0)\n",
+    "\n",
+    "# Останавливает обучение по какому либо критерию. Например, loss не уменьшается две эпохи подряд\n",
+    "early_stop = keras.callbacks.EarlyStopping(monitor='val_loss', patience=2)\n",
+    "\n",
+    "tqdm = TQDMNotebookCallback(leave_inner=True)\n",
+    "\n",
     "history = model.fit_generator(generator=train_generator,\n",
     "                                  steps_per_epoch=STEP_SIZE_TRAIN,\n",
     "                                  validation_data=valid_generator,\n",
@@ -564,9 +561,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ещё добавить свой коллбек"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -595,9 +599,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
