--- a/week2/cards_notebook.ipynb
+++ b/week2/cards_notebook.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "DarZnvmuOiac"
    },
    "source": [
@@ -13,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Сначала сделаем загрузку данных:\n",
@@ -25,7 +31,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### В этом ноутбуке:\n",
     "1. Изучим датасет с картами лояльности\n",
@@ -39,6 +48,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "TOXRs0OQOiae"
    },
    "source": [
@@ -52,6 +63,8 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "_1S2xR6EOiag"
    },
    "outputs": [],
@@ -71,6 +84,8 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "DEz8Fek1Oial"
    },
    "outputs": [],
@@ -86,6 +101,8 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "bzHV3tq8Oiap"
    },
    "outputs": [],
@@ -100,6 +117,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "LvfzGRQaOias"
    },
    "source": [
@@ -112,9 +131,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 483.0
+     "height": 483
     },
     "colab_type": "code",
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "id": "GLVVr38JOiau",
     "outputId": "74ac2e20-3ce3-4b02-c0b3-2ced6dde4ed6"
    },
@@ -151,6 +173,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "TVMn7KHVOia1"
    },
    "source": [
@@ -163,9 +187,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 35.0
+     "height": 35
     },
     "colab_type": "code",
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "id": "78Dw-fO3Oia3",
     "outputId": "7794161f-a8ef-42fa-c6e0-b170be05670e"
    },
@@ -207,7 +234,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
@@ -215,6 +246,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "Vcdag8VOOia9"
    },
    "source": [
@@ -225,6 +258,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "zMforP2KOia_"
    },
    "source": [
@@ -238,6 +273,8 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "KHwCu-vEOibA"
    },
    "outputs": [],
@@ -263,6 +300,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "unGueFLpOibF"
    },
    "source": [
@@ -273,6 +312,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "CUAR8dVFOibG"
    },
    "source": [
@@ -291,10 +332,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 451.0
+     "height": 451
     },
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "I3o6d61eOibH",
     "outputId": "0920b1da-7082-445a-bf8e-e2ffac99bc99"
    },
@@ -330,6 +373,8 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "zt7Rw7AfOibO"
    },
    "outputs": [],
@@ -342,6 +387,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "_Eg-b8K3OibT"
    },
    "source": [
@@ -352,6 +399,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "yerJBUsUOibV"
    },
    "source": [
@@ -371,9 +420,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 52.0
+     "height": 52
     },
     "colab_type": "code",
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "id": "wwjv7nSCOibX",
     "outputId": "ea9286f4-4ca2-4c2f-856f-6643aa49758a"
    },
@@ -427,7 +479,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Делаем compile и запускаем обучение:"
    ]
@@ -439,6 +494,8 @@
     "colab": {},
     "colab_type": "code",
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "id": "YEUiEpMBOibj"
    },
    "outputs": [],
@@ -461,6 +518,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "hi6t0YF8Oibn"
    },
    "source": [
@@ -471,6 +530,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
+    "deletable": true,
+    "editable": true,
     "id": "ceeu0Z-8Oibp"
    },
    "source": [
@@ -481,7 +542,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -494,277 +557,6 @@
     "                                  verbose=1\n",
     "                                  )"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Кастомные метрики:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import keras.backend as K\n",
-    "\n",
-    "def precision(y_true, y_pred):\n",
-    "    \"\"\"Precision metric.\n",
-    "     Only computes a batch-wise average of precision.\n",
-    "     Computes the precision, a metric for multi-label classification of\n",
-    "    how many selected items are relevant.\n",
-    "    \"\"\"\n",
-    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
-    "    predicted_positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
-    "    precision = true_positives / (predicted_positives + K.epsilon())\n",
-    "    return precision\n",
-    "\n",
-    "def recall(y_true, y_pred):\n",
-    "    \"\"\"Recall metric.\n",
-    "     Only computes a batch-wise average of recall.\n",
-    "     Computes the recall, a metric for multi-label classification of\n",
-    "    how many relevant items are selected.\n",
-    "    \"\"\"\n",
-    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
-    "    possible_positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
-    "    recall = true_positives / (possible_positives + K.epsilon())\n",
-    "    return recall\n",
-    "\n",
-    "\n",
-    "model.compile(optimizer=optimizer,\n",
-    "                  loss='categorical_crossentropy',\n",
-    "                  metrics=['accuracy', precision, recall])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "XCTToPtmOibd"
-   },
-   "source": [
-    "## CallBacks:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "45bRs8t4Oibh"
-   },
-   "source": [
-    "__Коллбеки__: это класс, имеющий набор методов on_train_begin, on_train_end, on_epoch_begin, on_epoch_end, on_batch_begin, on_batch_end, которые позволяют выполнять какой-либо код в конце эпохи, в начале эпохи, в конце батча, в начале батча, в конце обучения, в начале обучения\n",
-    "\n",
-    "Примеры применения: \n",
-    " - Сохранение метрик качества в процессе обучения для онлайн визуализации\n",
-    " - Отправление в телегреамм/почту метрик качества\n",
-    " - Сохранение модели в конце каждой эпохи (можно даже после каждого батча)\n",
-    "\n",
-    "Примеры реализованных в Керасе коллбеков:\n",
-    "\n",
-    " - EarlyStopping - делает раннюю остановку процесса обучения по некоторому критерию (например, лосс не падает n эпох)\n",
-    "\n",
-    " - ModelCheckpoint - сохраняет модель после каждой эпохи\n",
-    "\n",
-    " - RemoteMonitor - отправляет логи на сервер\n",
-    "\n",
-    " - TensorBoard - сохраняет логи в папки для последующей визуализации в TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_6 (Conv2D)            (None, 222, 222, 20)      560       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2 (None, 111, 111, 20)      0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 109, 109, 20)      3620      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_6 (MaxPooling2 (None, 54, 54, 20)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 58320)             0         \n",
-      "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 256)               14930176  \n",
-      "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 18)                4626      \n",
-      "=================================================================\n",
-      "Total params: 14,938,982\n",
-      "Trainable params: 14,938,982\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "from keras.layers import InputLayer\n",
-    "model = Sequential()\n",
-    "model.add(InputLayer((224, 224, 3)))\n",
-    "#model.add(Reshape((224, 224, 1)))\n",
-    "model.add(Conv2D(20, 3, activation='relu'))\n",
-    "model.add(MaxPool2D())\n",
-    "\n",
-    "model.add(Conv2D(20, 3, activation='relu'))\n",
-    "model.add(MaxPool2D())\n",
-    "\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(256, activation='relu'))\n",
-    "model.add(Dense(18, activation='softmax'))\n",
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = optimizers.Adadelta(lr=1.0, rho=0.95, epsilon=None, decay=0.0)\n",
-    "\n",
-    "model.compile(optimizer=optimizer,\n",
-    "                  loss='categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras_tqdm'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-1e9528a88335>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras_tqdm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTQDMNotebookCallback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;34m\"\"\" Callbacks \"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcheckpointer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mModelCheckpoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'..\\models\\weights.{epoch:02d}-val_loss{val_loss:.2f}.hdf5'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmonitor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'val_loss'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msave_best_only\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'min'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mperiod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras_tqdm'"
-     ],
-     "output_type": "error"
-    }
-   ],
-   "source": [
-    "from keras_tqdm import TQDMNotebookCallback\n",
-    "\n",
-    "\"\"\" Callbacks \"\"\"\n",
-    "checkpointer = ModelCheckpoint('..\\models\\weights.{epoch:02d}-val_loss{val_loss:.2f}.hdf5', monitor='val_loss', verbose=0, save_best_only=True, mode='min', period=1)\n",
-    "\n",
-    "\"\"\" Enable logging for Tensorboard \"\"\"\n",
-    "TB = keras.callbacks.TensorBoard(log_dir='..\\logs',  write_graph=True)\n",
-    "\n",
-    "# Скоращает learning rate, когда loss не уменьшается несколько эпох подряд:\n",
-    "reduce = keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=3, verbose=0, mode='auto', min_delta=0.0001, min_lr=0)\n",
-    "\n",
-    "# Останавливает обучение по какому либо критерию. Например, loss не уменьшается 3 эпохи подряд\n",
-    "early_stop = keras.callbacks.EarlyStopping(monitor='val_loss', patience=3)\n",
-    "\n",
-    "tqdm = TQDMNotebookCallback(leave_inner=True)\n",
-    "\n",
-    "history = model.fit_generator(generator=train_generator,\n",
-    "                                  steps_per_epoch=STEP_SIZE_TRAIN,\n",
-    "                                  validation_data=valid_generator,\n",
-    "                                  #validation_steps=STEP_SIZE_VALID,\n",
-    "                                  epochs=4,\n",
-    "                                  callbacks=[checkpointer, TB, reduce, early_stop, tqdm],\n",
-    "                                  verbose=1\n",
-    "                                  )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Напишем свой коллбек, который будет отправлять уведомления в телеграм со всеми метриками:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "from telepyth import TelepythClient\n",
-    "tp = TelepythClient('14227435377386201718')\n",
-    "import keras\n",
-    "\n",
-    "class TelegramCallback(keras.callbacks.Callback):\n",
-    "    def __init__(self, model_name):\n",
-    "\n",
-    "        self.model_name = model_name[:-3]\n",
-    "        self.epoch_num = 0\n",
-    "        text = '*Start training:' + str(\n",
-    "            datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")) + '*' + '\\n' + 'Model name: ' + str(\n",
-    "            model_name.replace('_', '\\_')) + '\\n'\n",
-    "        tp.send_text(text)\n",
-    "\n",
-    "\n",
-    "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        text = 'Epoch num: ' + str(self.epoch_num + 1) + '\\n'\n",
-    "        text += 'val\\_loss: ' + str(round(logs['val_loss'], 2)) + '- val\\_acc: ' + str(round(logs['val_acc'], 4)) + '\\n'\n",
-    "        self.epoch_num += 1\n",
-    "        tp.send_text(text)\n",
-    "\n",
-    "Telegram = TelegramCallback('model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-f26063a1bff6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m history = model.fit_generator(generator=train_generator,\n\u001b[0m\u001b[0;32m      2\u001b[0m                                   \u001b[0msteps_per_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSTEP_SIZE_TRAIN\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                                   \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvalid_generator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                                   \u001b[1;31m#validation_steps=STEP_SIZE_VALID,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                                   \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
-     ],
-     "output_type": "error"
-    }
-   ],
-   "source": [
-    "history = model.fit_generator(generator=train_generator,\n",
-    "                                  steps_per_epoch=STEP_SIZE_TRAIN,\n",
-    "                                  validation_data=valid_generator,\n",
-    "                                  #validation_steps=STEP_SIZE_VALID,\n",
-    "                                  epochs=4,\n",
-    "                                  callbacks=[checkpointer, TB, reduce, early_stop, tqdm, Telegram],\n",
-    "                                  verbose=1\n",
-    "                                  )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -791,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
