--- a/week2/cards_notebook.ipynb
+++ b/week2/cards_notebook.ipynb
@@ -13,6 +13,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Работаем с датасетом карт лояльности. Задача: по фотографии классифицировать к какому бренду относится карточка. Всего 18 классов. \n",
+    "2. Объявим и обучим модель, классифицирующую карточки\n",
+    "3. Посмотрим как объявлять и использовать кастомные метрики \n",
+    "4. Посмотрим что такое Callbacks\n",
+    "5. Сделаем для нашей модели Callback-tqdm, Callback для сохранения модели и Callback для Tensorboard\n",
+    "6. Чуть подробнее поговорим про Tensorboard"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -544,6 +556,206 @@
     "                                  verbose=1\n",
     "                                  )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Кастомные метрики:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import keras.backend as K\n",
+    "\n",
+    "def precision(y_true, y_pred):\n",
+    "    \"\"\"Precision metric.\n",
+    "     Only computes a batch-wise average of precision.\n",
+    "     Computes the precision, a metric for multi-label classification of\n",
+    "    how many selected items are relevant.\n",
+    "    \"\"\"\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    predicted_positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
+    "    precision = true_positives / (predicted_positives + K.epsilon())\n",
+    "    return precision\n",
+    "\n",
+    "def recall(y_true, y_pred):\n",
+    "    \"\"\"Recall metric.\n",
+    "     Only computes a batch-wise average of recall.\n",
+    "     Computes the recall, a metric for multi-label classification of\n",
+    "    how many relevant items are selected.\n",
+    "    \"\"\"\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    possible_positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
+    "    recall = true_positives / (possible_positives + K.epsilon())\n",
+    "    return recall\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer='adam',\n",
+    "                  loss='categorical_crossentropy',\n",
+    "                  metrics=['accuracy', precision, recall])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras_tqdm import TQDMNotebookCallback\n",
+    "\n",
+    "model.fit(x=x_train, y=y_train, epochs=30, batch_size=32, verbose=0,\n",
+    "          validation_split=0.1, callbacks=[TQDMNotebookCallback(leave_inner=True)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CallBacks:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Коллбеки__: это класс, имеющий набор методов on_train_begin, on_train_end, on_epoch_begin, on_epoch_end, on_batch_begin, on_batch_end, которые позволяют выполнять какой-либо код в конце эпохи, в начале эпохи, в конце батча, в начале батча, в конце обучения, в начале обучения\n",
+    "\n",
+    "Примеры применения: \n",
+    " - Сохранение метрик качества в процессе обучения для онлайн визуализации\n",
+    " - Отправление в телегреамм/почту метрик качества\n",
+    " - Сохранение модели в конце каждой эпохи (можно даже после каждого батча)\n",
+    "\n",
+    "Примеры реализованных в Керасе коллбеков:\n",
+    "\n",
+    " - EarlyStopping - делает раннюю остановку процесса обучения по некоторому критерию (например, лосс не падает n эпох)\n",
+    "\n",
+    " - ModelCheckpoint - сохраняет модель после каждой эпохи\n",
+    "\n",
+    " - RemoteMonitor - отправляет логи на сервер\n",
+    "\n",
+    " - TensorBoard - сохраняет логи в папки для последующей визуализации в TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.callbacks import ModelCheckpoint, TensorBoard, ReduceLROnPlateau, EarlyStopping\n",
+    "\n",
+    "\"\"\" Callbacks \"\"\"\n",
+    "checkpointer = ModelCheckpoint('..\\models\\weights.{epoch:02d}-val_loss{val_loss:.2f}.hdf5', monitor='val_loss', verbose=0, save_best_only=True, mode='min', period=1)\n",
+    "\n",
+    "\"\"\" Enable logging for Tensorboard \"\"\"\n",
+    "\n",
+    "# Скоращает learning rate, когда loss не уменьшается несколько эпох подряд:\n",
+    "reduce = ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=3, verbose=0, mode='auto', min_delta=0.0001, min_lr=0)\n",
+    "\n",
+    "# Останавливает обучение по какому либо критерию. Например, loss не уменьшается 3 эпохи подряд\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=3)\n",
+    "\n",
+    "tqdm = TQDMNotebookCallback(leave_inner=True)\n",
+    "\n",
+    "\n",
+    "model.fit(x=x_train, y=y_train, epochs=30, batch_size=32, verbose=0,\n",
+    "          validation_split=0.1, callbacks=[checkpointer, reduce, early_stop, tqdm])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Шаблон для своего коллбека:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class My_Callback(keras.callbacks.Callback):\n",
+    "    def on_train_begin(self, logs={}):\n",
+    "        return\n",
+    " \n",
+    "    def on_train_end(self, logs={}):\n",
+    "        return\n",
+    " \n",
+    "    def on_epoch_begin(self, logs={}):\n",
+    "        return\n",
+    " \n",
+    "    def on_epoch_end(self, epoch, logs={}):\n",
+    "        return\n",
+    " \n",
+    "    def on_batch_begin(self, batch, logs={}):\n",
+    "        return\n",
+    " \n",
+    "    def on_batch_end(self, batch, logs={}):\n",
+    "        self.losses.append(logs.get('loss'))\n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Чуть подробнее остановимся на Callback'е TensorBoard:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tensorboardcolab import TensorBoardColab, TensorBoardColabCallback\n",
+    "tbc=TensorBoardColab() # генерирует URL\n",
+    "# В fit же передайте объект TensorBoardColabCallback(tbc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.fit(x=x_train, y=y_train, epochs=30, batch_size=32, verbose=0,\n",
+    "          validation_split=0.1, callbacks=[TensorBoardColabCallback(tbc), tqdm])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если не открывается URL, то нужно включить VPN. Например, через opera vpn или установить на Chrome расширение (например, Browsec https://chrome.google.com/webstore/detail/browsec-vpn-free-and-unli/omghfjlpggmjjaagoclmmobgdodcjboh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
